tests/ui/const-generics/mgca/early-bound-param-lt-bad.stderr
error: generic parameters may not be used in const operations
  --> $DIR/early-bound-param-lt-bad.rs:9:30
   |
LL |     T: Trait<const { let a: &'a (); 1 }>
   |                              ^^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 1 previous error

